Fixed checkbox not redrawing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       var CONSTELLATION_SIZE = 7;
       var NUM_CONSTELLATIONS = 7;
       var CONSTELLATION_DISTANCE = 0.1;
+      var INVERTED_COLOURS = 0;
       var inpSeed;
       var stars = [];
       var constellations = [];
@@ -51,6 +52,13 @@
 		      constellationDistance.input(onInput);
 		      constellationDistance.parent(cmddiv);
 	      }
+	      let icdiv = createDiv('');
+	      {
+	      	createSpan('invert colours: ').parent(icdiv);
+	      	invertedColours = createCheckbox();
+            invertedColours.changed(onInput);
+	      	invertedColours.parent(icdiv);
+	      }
         let jsondiv = createDiv('');
         {
           inpjson = createElement('textarea');
@@ -67,11 +75,20 @@
 
       function draw() {
 	      translate(width/2, height/2);
-        background(0);
-	      stroke(255);
-	      noFill();
-	      strokeWeight(1);
-	      ellipse(0, 0, width, height);
+	      if (INVERTED_COLOURS){
+	      	background(255);
+            stroke(0);
+	        noFill();
+	        strokeWeight(1);
+	        ellipse(0, 0, width, height);
+		  }else{
+		  	background(0);
+	        stroke(255);
+		    noFill();
+		    strokeWeight(1);
+		    ellipse(0, 0, width, height);
+		  }
+          
 	      for(let star of stars){
 		      star.show();
 	      }
@@ -83,6 +100,7 @@
       function onInput(){
 	      randomSeed(inpSeed.value());
 	      let constellationSeed = random(Number.MAX_SAFE_INTEGER);
+	      INVERTED_COLOURS = invertedColours.checked();
 	      NUM_CONSTELLATIONS = numConstellations.value();
 	      CONSTELLATION_SIZE = constellationSize.value();
 	      CONSTELLATION_DISTANCE = pow(2, constellationDistance.value())/1024;
@@ -100,6 +118,7 @@
           'constellation_size': constellationSize.value(),
           'constellation_distance': constellationDistance.value(),
           'star_density': starDensity.value(),
+          'inverted_colours': invertedColours.checked(),
         }
         inpjson.value(JSON.stringify(data));
       }
@@ -111,6 +130,7 @@
         constellationSize.value(data.constellation_size);
         constellationDistance.value(data.constellation_distance);
         starDensity.value(data.star_density);
+        invertedColours.checked(inverted_colours);
         onInput();
       }
 
@@ -191,7 +211,11 @@
 	      let cart = stereographicToCartesian(this.phi, this.theta);
 	      this.x = cart.x;
 	      this.y = cart.y;
-	      this.color = color(255,255,255);
+	      if (INVERTED_COLOURS){
+			this.color = color(0,0,0);
+	      }else{
+	      	this.color = color(255,255,255);
+	      }
       }
 
       Star.prototype.show = function(){
