--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+  </head>
+  <body>
     <style type="text/css">
       table, th, td{
         padding: 10px;
@@ -7,6 +9,7 @@
 
       th, td{
         text-align: center;
+        min-width: 100px;
       }
 
       th, tr {
@@ -22,10 +25,19 @@
       }
 
       table{
-        width: 50%;
         border: 1px solid black;
         border-spacing: 15px;
         border-collapse: collapse;
+      }
+
+      .noBackground{
+        border: none;
+        background: #ffffff;
+        min-width: 40px;
+      }
+
+      .rightborder{
+        border-right: 1px solid black;
       }
 
       .slider{
@@ -42,24 +54,29 @@
         <th colspan="2">
           Other Controls
         </th>
-        <th>
+        <th colspan="2">
           JSON
         </th>
       </tr>
       <tr>
         <td>
-          Seed &nbsp; &nbsp;<input type="button" id="resetseed" value="New Seed" onclick="newSeed()">
+          <table class="noBackground">
+            <tr class="noBackground">
+              <td class="noBackground">Seed</td>
+              <td class="noBackground"><input type="button" id="resetseed" value="New Seed" onclick="newSeed()"></td>
+            </tr>
+          </table>
         </td>
-        <td style="border-right: 1px solid black">
+        <td class="rightborder">
           <input type="text" id="inpseed" onclick="newSeed()">
         </td>
         <td>
           Canvas Size
         </td>
-        <td  style="border-right: 1px solid black">
+        <td class="rightborder">
           <input type="range" min="100" max="2000" value="500" step="100" class="slider" id="canvassize" oninput="onInput()">
         </td>
-        <td>
+        <td colspan="2">
           <textarea rows="3" cols="20" id="inpjson">
             
           </textarea>
@@ -69,16 +86,16 @@
         <td>
           Star Density
         </td>
-        <td style="border-right: 1px solid black">
-          <input type="range" min="4" max="12" value="8" class="slider" id="stardensity" oninput="onInput()">
+        <td class="rightborder">
+          <input type="range" min="4" max="12" value="8" step="1e-18" class="slider" id="stardensity" oninput="onInput()">
         </td>
         <td>
           Invert Colours
         </td>
-        <td style="border-right: 1px solid black" onchange="onInput()">
+        <td class="rightborder" onchange="onInput()">
           <input type="checkbox" id="invertcolours">
         </td>
-        <td>
+        <td colspan="2">
           Copy this to save current settings.
         </td>
       </tr>
@@ -86,12 +103,12 @@
         <td>
           Number of Constellations
         </td>
-        <td style="border-right: 1px solid black">
+        <td class="rightborder">
           <input type="range" min="0" max="24" value="12" class="slider" id="numconstellations" oninput="onInput()">
         </td>
         <td></td>
-        <td style="border-right: 1px solid black"></td>
-        <td>
+        <td class="rightborder"></td>
+        <td colspan="2">
            Paste and press 'load' to restore them.
         </td>
       </tr>
@@ -99,11 +116,11 @@
         <td>
           Stars per Constellation
         </td>
-        <td style="border-right: 1px solid black">
+        <td class="rightborder">
           <input type="range" min="2" max="12" value="7" class="slider" id="constellationsize" oninput="onInput()">
         </td>
-        <td></td><td style="border-right: 1px solid black"></td>
-        <td>
+        <td></td><td class="rightborder"></td>
+        <td colspan="2">
           <input type="button" name="btnloadjson", value="Load", onclick="readJSON()">
         </td>
       </tr>
@@ -111,15 +128,14 @@
         <td>
           Constellation Max Distance
         </td>
-        <td style="border-right: 1px solid black">
+        <td class="rightborder">
           <input type="range" min="6" max="8.5" value="7.25" step="0.01" class="slider" id="constellationdistance" oninput="onInput()">
         </td>
-        <td><td style="border-right: 1px solid black"></td></td><td></td>
+        <td><td class="rightborder"></td></td><td></td><td></td>
       </tr>
     </table>
     <br>
-  </head>
-
+  </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
   <script>
