Clicking the seed field shouldn't generate a new seed.

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           </table>
         </td>
         <td class="rightborder">
-          <input type="text" id="inpseed" onclick="newSeed()">
+          <input type="text" id="inpseed" oninput="onInput()">
         </td>
         <td>
           Canvas Size
