--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       var CONSTELLATION_SIZE_RANGE = 0;
       var NUM_CONSTELLATIONS = 7;
       var CONSTELLATION_DISTANCE = 0.1;
+      var PRETTIFY_CONSTELLATIONS = false;
       var INVERTED_COLOURS = 0;
       var stars = [];
       var constellations = [];
@@ -65,6 +66,7 @@
       var minConstellationSize;
       var constellationSizeRange;
       var constellationDistance;
+      var prettifyConstellations;
       var canvasSize;
       var invertColours;
 
@@ -75,6 +77,7 @@
         minConstellationSize = document.getElementById("minconstellationsize");
         constellationSizeRange = document.getElementById("constellationsizerange");
         constellationDistance = document.getElementById("constellationdistance");
+        prettifyConstellations = document.getElementById("prettifyconstellations");
         canvasSize = document.getElementById("canvassize");
         invertColours = document.getElementById("invertcolours");
         newSeed();
@@ -120,6 +123,7 @@
         MIN_CONSTELLATION_SIZE = parseInt(minConstellationSize.value);
         CONSTELLATION_SIZE_RANGE = parseInt(constellationSizeRange.value);
         CONSTELLATION_DISTANCE = pow(2, constellationDistance.value)/1024;
+        PRETTIFY_CONSTELLATIONS = prettifyConstellations.checked;
         CANVAS_SIZE = canvasSize.value;
         resizeCanvas(CANVAS_SIZE, CANVAS_SIZE);
         stars = generateStars();
@@ -137,6 +141,7 @@
           'constellation_size_range': constellationSizeRange.value,
           'constellation_distance': constellationDistance.value,
           'star_density': starDensity.value,
+          'prettify_constellations':prettifyConstellations.checked,
           'inverted_colours': invertColours.checked,
           'canvas_size': canvasSize.value,
         }
@@ -151,6 +156,7 @@
         constellationSizeRange.value = data.constellation_size_range;
         constellationDistance.value = data.constellation_distance;
         starDensity.value = data.star_density;
+        prettifyConstellations.checked = data.prettify_constellations;
         invertColours.checked = data.inverted_colours;
         canvasSize.value=data.canvas_size;
         onInput();
@@ -171,9 +177,7 @@
         while (constellations.length < NUM_CONSTELLATIONS && remaining.length > 0){
           let constellation = new Constellation();
           constellation.stars.push(remaining.pop());
-
           var CONSTELLATION_SIZE = Math.round(random(CONSTELLATION_SIZE_RANGE)) + MIN_CONSTELLATION_SIZE;
-
           while (constellation.stars.length < CONSTELLATION_SIZE){
             let selected = random(constellation.stars);
             let found = false;
@@ -198,7 +202,11 @@
               break;
             }
           }
-          constellations.push(constellation);
+          if (PRETTIFY_CONSTELLATIONS){
+            constellations.push(constellation.prettify());
+          } else{
+            constellations.push(constellation);
+          }
         }
         return constellations;
       }
@@ -260,7 +268,7 @@
       }
 
       Star.prototype.projectedDistance = function(other){
-          return sqrt(pow((this.x-other.x),2) + pow((this.y-other.y),2));
+          return distance(this, other);
       }
 
       function randomStar(){
@@ -299,6 +307,142 @@
         return false;
       }
 
+      Constellation.prototype.prettify = function(){
+        let delaunay = this.delaunay();
+        newconstellation = delaunay.relativeneighbors();
+        return newconstellation;
+      }
+
+      Constellation.prototype.delaunay = function(){
+        let newconstellation = new Constellation();
+        let nodes = this.stars;
+        let lines = [];
+        if (nodes.length < 2){
+          return this;
+        }
+        if (nodes.length === 2){
+          newconstellation.stars = nodes.splice();
+          newconstellation.edges.push([nodes[0], nodes[1]]);
+          return newconstellation;
+        }
+        let triangulation = [];
+        let supertriangle = [{x:-10, y:-20}, {x:-10, y:10}, {x:20, y:10}];
+        triangulation.push(supertriangle);
+
+        for (let node of nodes){
+          //find all triangles that are no longer valid due to this node's insertion
+          let badtriangles = []
+          for (let triangle of triangulation){
+            if (insidecircle(node, circumcircle(triangle[0], triangle[1], triangle[2]))){
+              badtriangles.push(triangle);
+            }
+          }
+
+          // Find the boundary of polgonal hole formed by these "bad" triangles
+          let polygon = [];
+          for (let triangle of badtriangles){
+            for (let i = 0; i < 3; i++) {
+              // get the edges of the bad triangles which don't touch other bad triangles
+              let edgefrom = triangle[i];
+              let edgeto = triangle[(i+1)%3];
+              let sharedWithOther = false;
+              for (let other of badtriangles) {
+                if (other === triangle){
+                  continue;
+                }
+                if (other.indexOf(edgefrom) === -1){
+                  continue;
+                }
+                if (other.indexOf(edgeto) === -1){
+                  continue;
+                }
+                sharedWithOther = true;
+                break;
+              }
+              if (!sharedWithOther) {
+                polygon.push(edgefrom, edgeto);
+              }
+            }
+          }
+          //discard all bad triangles
+          for (let triangle of badtriangles){
+            triangulation.splice(triangulation.indexOf(triangle), 1);
+          }
+          //re-triangulate the polygonal hole. create a new triangle for each edge
+          for (let i = 0; i < polygon.length - 1; i +=2){
+            let triangle = [polygon[i], polygon[i+1], node];
+            triangulation.push(triangle);
+          }
+        }
+
+        //remove all triangles that contain a vertex from the original super-triangle
+        for (let i = 0; i < triangulation.length; i++){
+          let triangle = triangulation[i];
+          for (let vertex of triangle){
+            if (supertriangle.indexOf(vertex) !== -1){
+              triangulation.splice(i, 1);
+              i--;
+              break;
+            }
+          }
+        }
+
+        let links = [];
+        //convert triangles to unique lines
+        for (let triangle of triangulation){
+          let v0 = triangle[0], v1 = triangle[1], v2 = triangle[2];
+          let firstDuplicate = false, secondDuplicate = false, thirdDuplicate = false;
+          for (let link of links){
+            if(link.includes(v0) && link.includes(v1)){
+              firstDuplicate = true;
+            }
+            if(link.includes(v1) && link.includes(v2)){
+              secondDuplicate = true;
+            }
+            if(link.includes(v2) && link.includes(v0)){
+              thirdDuplicate = true;
+            }
+          }
+          if (!firstDuplicate){
+            links.push([v0, v1]);
+          }
+          if (!secondDuplicate){
+            links.push([v1, v2]);
+          }
+          if (!thirdDuplicate){
+            links.push([v2, v0]);
+          }
+        }
+        newconstellation.stars = nodes;
+        newconstellation.edges = links;
+        return newconstellation;
+      }
+
+      Constellation.prototype.relativeneighbors = function(){
+        let links = this.edges.slice();
+        let graphlinks = [];
+        for (let link of links){
+          let anyBlocking = false;
+          let length = distance(link[0], link[1]);
+          for (let node of this.stars){
+            if (link.includes(node)){
+              continue;
+            }
+            if ((distance(node, link[0]) < length) && (distance(node, link[1]) < length)){
+              anyBlocking = true;
+              break;
+            }
+          }
+          if (!anyBlocking) {
+            graphlinks.push(link);
+          }
+        }
+        newconstellation = new Constellation();
+        newconstellation.stars = this.stars.slice();
+        newconstellation.edges = graphlinks;
+        return newconstellation;
+      }
+
       // Line segment intersection, see https://stackoverflow.com/questions/9043805/test-if-two-lines-intersect-javascript-function#15182022
       // returns true iff the line from (a,b)->(c,d) instersects with (p,q)->(r,s)
       function intersects(a,b,c,d,p,q,r,s) {
@@ -311,6 +455,54 @@
           gamma = ((b - d) * (r - a) + (c - a) * (s - b)) / det;
           return (0 < lambda && lambda < 1) && (0 < gamma && gamma < 1);
         }
+      }
+
+      function perpendicularBisector(p, q) {
+        //given two points p and q, returns the perpendicular bisector on the form ax + by = c
+        let linea = q.y - p.y;
+        let lineb = p.x - q.x;
+        let linec = linea * p.x + lineb * p.y;
+        let midpoint = {
+          x:(p.x+q.x)/2,
+          y:(p.y+q.y)/2
+        };
+        return {
+          a: -lineb,
+          b: linea,
+          c: -lineb*midpoint.x + linea*midpoint.y
+        };
+      }
+
+      function linelineintersection(l1, l2){
+        determinant = l1.a * l2.b - l2.a * l1.b;
+        if (determinant == 0){
+          return undefined; //lines are parallel, no intersection exists
+        }
+        return {
+          x: (l2.b * l1.c - l1.b * l2.c)/determinant,
+          y: (l1.a * l2.c - l2.a * l1.c)/determinant
+        };
+      }
+
+      function circumcircle(p1, p2, p3){
+        let a = distance(p1, p2);
+        let b = distance(p1, p3);
+        let c = distance(p2, p3);
+        let bisector1 = perpendicularBisector(p1, p2);
+        let bisector2 = perpendicularBisector(p1, p3);
+        return {
+          diameter: (2 * a * b * c) / sqrt((a+b+c)*(b+c-a)*(c+a-b)*(a+b-c)),
+          center: linelineintersection(bisector1, bisector2)
+        }
+      }
+
+      function insidecircle(point, circle){
+        let dist= distance(point, circle.center);
+        return dist <= circle.diameter/2;
+      }
+
+      function distance(p1, p2){
+        return sqrt(pow((p1.x-p2.x),2) + pow((p1.y-p2.y),2));
       }
     </script>
   </head>
@@ -410,6 +602,15 @@
         </td>
         <td class="rightborder">
           <input type="range" min="6" max="8.5" value="7.25" step="0.01" class="slider" id="constellationdistance" oninput="onInput()">
+        </td>
+        <td><td class="rightborder"></td></td><td></td><td></td>
+      </tr>
+      <tr>
+        <td>
+          Prettify Constellations
+        </td>
+        <td class="rightborder">
+          <input type="checkbox" id="prettifyconstellations" onchange="onInput()">
         </td>
         <td><td class="rightborder"></td></td><td></td><td></td>
       </tr>
