--- a/index.html
+++ b/index.html
@@ -1,47 +1,41 @@
 <html>
   <head>
     <style type="text/css">
-      table, th, td{
-        padding: 10px;
+      body{
+        display:flex;
+        justify-content: center;
+        flex-direction:column;
       }
-
-      th, td{
-        text-align: center;
-        min-width: 100px;
+      .controls{
+        width:100%;
+        display:flex;
+        flex-direction:row;
+        flex-wrap:wrap;
+        justify-content:center;
       }
-
-      th, tr {
-        height: 40px;
+      .group{
+        width:30%;
+        border:1px solid black;
+        flex-basis:280px;
       }
-
-      tr:nth-child(odd){
-        background-color: #f0f0f0;
+      .control{
+        width:100%;
+        display:flex;
+        flex-direction:column;
+        justify-content:center;
+        padding:10px;
+        box-sizing: border-box;
       }
-
-      th{
-        border: 1px solid black;
-      }
-
-      table{
-        border: 1px solid black;
-        border-spacing: 15px;
-        border-collapse: collapse;
-      }
-
-      .noBackground{
-        border: none;
-        background: #ffffff;
-        min-width: 40px;
-      }
-
-      .rightborder{
-        border-right: 1px solid black;
-      }
-
       .slider{
-        width: 90%;
-        background: #d3d3d3;
-        height: 5px;
+        width:100%;
+      }
+      .header{
+        text-align:center;
+        border-bottom:1px solid black;
+      }
+      canvas{
+        margin-left:auto;
+        margin-right:auto;
       }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
@@ -507,114 +501,70 @@
     </script>
   </head>
   <body>
-    <table>
-      <tr>
-        <th colspan="2">
+    <div class="controls">
+      <div class="group" id="generatorcontrols">
+        <div class="header">
           Generator Controls
-        </th>
-        <th colspan="2">
-          Other Controls
-        </th>
-        <th colspan="2">
-          JSON
-        </th>
-      </tr>
-      <tr>
-        <td>
-          <table class="noBackground">
-            <tr class="noBackground">
-              <td class="noBackground">Seed</td>
-              <td class="noBackground"><input type="button" id="resetseed" value="New Seed" onclick="newSeed()"></td>
-            </tr>
-          </table>
-        </td>
-        <td class="rightborder">
+        </div>
+        <div class="control">
+          <span>Seed</span>
           <input type="text" id="inpseed" oninput="onInput()">
-        </td>
-        <td>
-          Canvas Size
-        </td>
-        <td class="rightborder">
-          <input type="range" min="100" max="2000" value="500" step="100" class="slider" id="canvassize" oninput="onInput()">
-        </td>
-        <td colspan="2">
-          <textarea rows="3" cols="20" id="inpjson">
-            
-          </textarea>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Star Density
-        </td>
-        <td class="rightborder">
+          <input type="button" id="resetseed" value="New Seed" onclick="newSeed()">
+        </div>
+        <div class="control">
+          <span>Star Density</span>
           <input type="range" min="4" max="12" value="8" step="1e-18" class="slider" id="stardensity" oninput="onInput()">
-        </td>
-        <td>
-          Invert Colours
-        </td>
-        <td class="rightborder" onchange="onInput()">
-          <input type="checkbox" id="invertcolours">
-        </td>
-        <td colspan="2">
-          Copy this to save current settings.
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Number of Constellations
-        </td>
-        <td class="rightborder">
+        </div>
+        <div class="control">
+          <span>Number of Constellations</span>
           <input type="range" min="0" max="24" value="12" class="slider" id="numconstellations" oninput="onInput()">
-        </td>
-        <td></td>
-        <td class="rightborder"></td>
-        <td colspan="2">
-           Paste and press 'load' to restore them.
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Minimum Stars per Constellation
-        </td>
-        <td class="rightborder">
+        </div>
+        <div class="control">
+          <span>Minimum Stars per Constellation</span>
           <input type="range" min="2" max="12" value="7" class="slider" id="minconstellationsize" oninput="onInput()">
-        </td>
-        <td></td><td class="rightborder"></td>
-        <td colspan="2">
-          <input type="button" name="btnloadjson", value="Load", onclick="readJSON()">
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Additional Stars per Constellation
-        </td>
-        <td class="rightborder">
+        </div>
+        <div class="control">
+          <span>Additional Stars per Constellation</span>
           <input type="range" min="0" max="6" value="0" class="slider" id="constellationsizerange" oninput="onInput()">
-        </td>
-        <td></td><td class="rightborder"></td>
-        <td colspan="2">
-        </td>
-      </tr>
-      <tr>
-        <td>
-          Constellation Max Distance
-        </td>
-        <td class="rightborder">
+        </div>
+        <div class="control">
+          <span>Constellation Max Distance</span>
           <input type="range" min="6" max="8.5" value="7.25" step="0.01" class="slider" id="constellationdistance" oninput="onInput()">
-        </td>
-        <td><td class="rightborder"></td></td><td></td><td></td>
-      </tr>
-      <tr>
-        <td>
-          Prettify Constellations
-        </td>
-        <td class="rightborder">
-          <input type="checkbox" id="prettifyconstellations" onchange="onInput()">
-        </td>
-        <td><td class="rightborder"></td></td><td></td><td></td>
-      </tr>
-    </table>
-    <br>
+        </div>
+        <div class="control">
+          <label>
+            Prettify Constellations
+            <input type="checkbox" id="prettifyconstellations" onchange="onInput()">
+          </label>
+        </div>
+      </div>
+      <div class="group" id="displaycontrols">
+        <div class="header">
+          Display Controls
+        </div>
+        <div class="control">
+          <span>Canvas Size</span>
+          <input type="range" min="100" max="2000" value="500" step="100" class="slider" id="canvassize" oninput="onInput()">
+        </div>
+        <div class="control">
+          <label>
+            Invert Colours
+            <input type="checkbox" id="invertcolours" oninput="onInput()">
+          </label>
+        </div>
+      </div>
+      <div class="group" id="saveloadcontrols">
+        <div class="header">
+          JSON
+        </div>
+        <div class="control">
+          <textarea rows="3" cols="20" id="inpjson">
+          </textarea>
+          Copy this to save current settings.
+          Paste and press 'load' to restore them.
+          <input type="button" name="btnloadjson", value="Load", onclick="readJSON()">
+        </div>
+      </div>
+    </div>
   </body>
 </html>
